# pexip-mgmt-mcp

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  LICENSE  README.md  SECURITY.md  TEST-PLAN.md  TOOLS.md  docker-compose.yml  pyproject.toml  server.json
.github/: PUBLISHING.md  architecture.mmd  dependabot.yml
.github/workflows/: ci.yml  docker.yml  release.yml
docs/: identity.md
evals/: README.md  conftest.py  scoring.py  test_error_handling.py  test_live_integration.py  test_parameters.py  test_tool_selection.py  test_workflows.py
evals/cases/: error_handling.yaml  parameters.yaml  tool_selection.yaml  workflows.yaml
packaging/docker-mcp-registry/: server.yaml
packaging/mcpb/: README.md  build.sh  main.py  manifest.json
pexip-mgmt-skills/: .mcp.json  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  README.md
pexip-mgmt-skills/.claude-plugin/: plugin.json
pexip-mgmt-skills/recipes/: audit-bad-quality-calls.md  daily-call-report.md  kick-and-lock-meeting.md  provision-team-vmr.md  webhook-collector-bootstrap.md
pexip-mgmt-skills/scripts/: install.sh  new-skill.sh  validate-skills.py
pexip-mgmt-skills/skills/_intake/pexip-mgmt-intake/: SKILL.md
pexip-mgmt-skills/spec/: agent-skills.md  pexip-conventions.md
pexip-mgmt-skills/template/new-skill/: SKILL.md
scripts/: generate_tools_md.py
src/pexip_mcp/: __init__.py  __main__.py  audit.py  client.py  config.py  mcp_app.py  oidc.py  server.py
src/pexip_mcp/tools/: __init__.py  _helpers.py  alias.py  automatic_participant.py  command.py  conference.py  device.py  end_user.py  gateway_rule.py  global_settings.py  history.py  infrastructure.py  ivr_theme.py  ldap.py  resource_crud.py  schema.py  status.py
tests/: conftest.py  test_alias.py  test_audit.py  test_automatic_participant.py  test_client.py  test_command.py  test_conference.py  test_config.py  test_device.py  test_end_user.py  test_gateway_rule.py  test_global_settings.py  test_helpers.py  test_history.py  test_infrastructure.py  test_ivr_theme.py  test_ldap.py  test_main.py  test_oauth.py  test_oidc.py  test_read_only.py  test_resource_crud.py  test_retry.py  test_schema.py  test_security_hardening.py  test_status.py
(+19 files in other folders)
