[project]
name = "pexip-mgmt-mcp"
version = "0.1.0"
description = "MCP server wrapping the Pexip Infinity Management API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Josh-E-S" }]
keywords = [
    "mcp",
    "model-context-protocol",
    "pexip",
    "pexip-infinity",
    "video-conferencing",
    "claude",
    "llm",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Communications :: Conferencing",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyjwt[crypto]>=2.10.1",
]

[project.urls]
Homepage = "https://github.com/Josh-E-S/pexip-mgmt-mcp"
Repository = "https://github.com/Josh-E-S/pexip-mgmt-mcp"
Issues = "https://github.com/Josh-E-S/pexip-mgmt-mcp/issues"

[project.scripts]
pexip-mgmt-mcp = "pexip_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pexip_mcp"]

[dependency-groups]
dev = [
    "anthropic>=0.40",
    "python-dotenv>=1.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pyyaml>=6.0",
    "respx>=0.21",
    "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
# Import pexip_mcp from src/ directly so tests don't depend on the editable
# install being present (matches the container's PYTHONPATH=/app/src).
pythonpath = ["src"]
# Coverage is reported on every run; the 80% gate is enforced only in CI on the
# FULL suite (see .github/workflows/ci.yml). This keeps subset runs like
# `pytest evals/` from failing the gate just because they exercise part of the code.
addopts = "--cov=pexip_mcp --cov-report=term-missing"
